Fix plus icon bug on iphone

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -104,10 +104,6 @@ h2 {
   right: -200px;
 }
 
-/* .canvas-container.slide-in {
-  right: 0;
-} */
-
 button {
   color: black;
   background-color: transparent;
