--- a/src/pages/Toys.css
+++ b/src/pages/Toys.css
@@ -183,6 +183,7 @@
   background-color: rgb(243, 110, 57);
   display: flex;
   align-items: center;
+  justify-content: center;
   transition: transform 0.2s ease; /* Apply transition to the transform property */
 }
 
